--- a/examples/reinforcement_learning_example/run.ipynb
+++ b/examples/reinforcement_learning_example/run.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install gymnasium[all] numpy torch uptrain"
+    "!pip3 install \"gymnasium[all]\" numpy torch uptrain"
    ]
   },
   {
@@ -167,6 +167,7 @@
     "        {\n",
     "            \"type\": uptrain.Visual.PLOT,\n",
     "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
+    "            \"x_feature_name\": \"epoch\",\n",
     "            \"y_feature_name\": \"reward\",\n",
     "            \"plot_name\": \"reward\",\n",
     "            \"dashboard_name\": \"RL\",\n",
@@ -183,6 +184,7 @@
     "        {\n",
     "            \"type\": uptrain.Visual.PLOT,\n",
     "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
+    "            \"x_feature_name\": \"epoch\",\n",
     "            \"y_feature_name\": \"mean\",\n",
     "            \"plot_name\": \"mean reward\",\n",
     "            \"dashboard_name\": \"RL\",\n",
@@ -199,6 +201,7 @@
     "        {\n",
     "            \"type\": uptrain.Visual.PLOT,\n",
     "            \"plot\": uptrain.PlotType.LINE_CHART,\n",
+    "            \"x_feature_name\": \"epoch\",\n",
     "            \"y_feature_name\": \"epsilon\",\n",
     "            \"plot_name\": \"epsilon-greedy\",\n",
     "            \"dashboard_name\": \"RL\",\n",
@@ -2353,6 +2356,7 @@
     "        avg_score.append(round(np.mean(scores[index][-100:]), 1))\n",
     "        eps.append(round(agent.epsilon, 3))\n",
     "        framework.log(inputs = {\n",
+    "            \"epoch\": [i],\n",
     "            \"reward\": [r_score[-1]],\n",
     "            \"mean\": [avg_score[-1]],\n",
     "            \"epsilon\": [eps[-1]],\n",
