--- a/examples/speech_to_text/run.ipynb
+++ b/examples/speech_to_text/run.ipynb
@@ -177,13 +177,7 @@
    ],
    "source": [
     "import torch\n",
-    "from transformers import (\n",
-    "    Speech2TextProcessor,\n",
-    "    Speech2TextForConditionalGeneration,\n",
-    "    pipeline,\n",
-    "    AutoTokenizer,\n",
-    "    AutoModel,\n",
-    ")\n",
+    "from transformers import Speech2TextProcessor, Speech2TextForConditionalGeneration, pipeline, AutoTokenizer, AutoModel\n",
     "from datasets import load_dataset, Audio\n",
     "import warnings\n",
     "import pandas as pd\n",
@@ -211,12 +205,8 @@
    },
    "outputs": [],
    "source": [
-    "model = Speech2TextForConditionalGeneration.from_pretrained(\n",
-    "    \"facebook/s2t-small-librispeech-asr\"\n",
-    ")\n",
-    "transcriber = pipeline(\n",
-    "    \"automatic-speech-recognition\", model=\"facebook/s2t-small-librispeech-asr\"\n",
-    ")"
+    "model = Speech2TextForConditionalGeneration.from_pretrained(\"facebook/s2t-small-librispeech-asr\")\n",
+    "transcriber = pipeline(\"automatic-speech-recognition\", model=\"facebook/s2t-small-librispeech-asr\")"
    ]
   },
   {
@@ -241,12 +231,7 @@
     "    dataset = dataset.cast_column(\"audio\", Audio(sampling_rate=16000))\n",
     "    return dataset\n",
     "\n",
-    "\n",
-    "dataset = process_dataset(\n",
-    "    load_dataset(\"PolyAI/minds14\", name=\"en-US\", split=\"train\")\n",
-    "    .shuffle(seed=42)\n",
-    "    .train_test_split(test_size=50)\n",
-    ")[\"test\"]"
+    "dataset = process_dataset(load_dataset(\"PolyAI/minds14\", name=\"en-US\", split=\"train\").shuffle(seed=42).train_test_split(test_size=50))[\"test\"]"
    ]
   },
   {
@@ -293,22 +278,23 @@
    "outputs": [],
    "source": [
     "cfg = {\n",
-    "    \"checks\": [\n",
-    "        {\n",
-    "            \"type\": uptrain.Monitor.OUTPUT_COMPARISON,\n",
-    "            \"measurable_args\": {\n",
-    "                \"type\": uptrain.MeasurableType.PREDICTION,\n",
-    "            },\n",
-    "            \"comparison_model\": uptrain.ComparisonModel.FASTER_WHISPER,\n",
-    "            \"comparison_metric\": uptrain.ComparisonMetric.ROGUE_L_F1,\n",
-    "            \"comparison_model_input_args\": {\n",
-    "                \"type\": uptrain.MeasurableType.INPUT_FEATURE,\n",
-    "                \"feature_name\": \"audio_file\",\n",
-    "            },\n",
-    "            \"threshold\": 0.6,\n",
-    "        }\n",
-    "    ],\n",
-    "    \"logging_args\": {\"st_logging\": True},\n",
+    "    \"checks\": [{\n",
+    "        \"type\": uptrain.Monitor.OUTPUT_COMPARISON,\n",
+    "        \"measurable_args\": {\n",
+    "            \"type\": uptrain.MeasurableType.PREDICTION,\n",
+    "        },\n",
+    "        \"comparison_model\": uptrain.ComparisonModel.FASTER_WHISPER,\n",
+    "        \"comparison_metric\": uptrain.ComparisonMetric.ROGUE_L_F1,\n",
+    "        \"comparison_model_input_args\": {\n",
+    "            \"type\": uptrain.MeasurableType.INPUT_FEATURE,\n",
+    "            \"feature_name\": \"audio_file\"\n",
+    "        },\n",
+    "        \"threshold\": 0.6\n",
+    "    }],\n",
+    "\n",
+    "    \"logging_args\": {\n",
+    "        \"st_logging\": True\n",
+    "    }\n",
     "}"
    ]
   },
@@ -623,7 +609,6 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
     "pd.read_csv(\"uptrain_smart_data/1/smart_data.csv\")"
    ]
   }
@@ -644,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
