Update required packages

--- a/examples/speech_to_text/run.ipynb
+++ b/examples/speech_to_text/run.ipynb
@@ -55,11 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Installation steps: https://huggingface.co/docs/transformers/installation\n",
-    "# Model borrowed from: https://huggingface.co/docs/transformers/model_doc/speech_to_text\n",
-    "# pip install datasets\n",
-    "# https://github.com/google/sentencepiece#installation\n",
-    "# pip install soundfile librosa"
+    "# !pip install transformers datasets soundfile librosa sentencepiece torchaudio faster_whisper rouge"
    ]
   },
   {
@@ -299,22 +295,6 @@
     "import pandas as pd\n",
     "pd.read_csv(\"uptrain_smart_data/1/smart_data.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "063ff5e7-1749-4a39-b5a4-7dcf0396a940",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d63c050-5ca2-4c6e-bd6f-47523908d86f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
