--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -429,10 +429,10 @@
     "        'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
     "        'feature_name': 'bert_embs'\n",
     "    },\n",
-    "    \"label_args\": {\n",
+    "    \"label_args\": [{\n",
     "        'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
     "        'feature_name': 'dataset_label'\n",
-    "    },\n",
+    "    }],\n",
     "    \"hover_args\": [{\n",
     "        'type': uptrain.MeasurableType.PREDICTION,\n",
     "        'feature_name': 'output'\n",
@@ -466,10 +466,10 @@
     "        'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
     "        'feature_name': 'bert_embs'\n",
     "    },\n",
-    "    \"label_args\": {\n",
+    "    \"label_args\": [{\n",
     "        'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
     "        'feature_name': 'dataset_label'\n",
-    "    },\n",
+    "    }],\n",
     "    \"hover_args\": [{\n",
     "        'type': uptrain.MeasurableType.PREDICTION,\n",
     "        'feature_name': 'output'\n",
@@ -908,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
