Added Open AI scores and collection of retraining dataset

--- a/examples/llm_evaluation/run.ipynb
+++ b/examples/llm_evaluation/run.ipynb
@@ -1,13 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "718cf13a-ba29-462d-88b5-1507d7c03154",
+   "metadata": {},
+   "source": [
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d063d5dd-976f-4b2d-b6ce-0d54a0253cb5",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"text-align: center;\">Unit-testing of a Fresh LLM model</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f713f16-2a62-4024-a5a4-e1b3b6ffe77f",
+   "metadata": {},
+   "source": [
+    "**Objective**: Given a golden testing dataset and a new LLM model (or LLM APIs with new prompts), evaluate the performance of the model on the testing dataset and collect cases where the model doesn't perform well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bba5119-2c7b-448d-9aac-36359dd061bb",
+   "metadata": {},
+   "source": [
+    "#### Install required packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b3fe33bf-524c-4498-a075-d0cc804947f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install uptrain rouge datasets umap-learn matplotlib py7zr torch"
+    "# !pip install uptrain datasets py7zr torch"
    ]
   },
   {
@@ -51,65 +87,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ba812c4c-1a00-4047-8326-77217255ec34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mean Pooling - Take attention mask into account for correct averaging\n",
-    "def mean_pooling(model_output, attention_mask):\n",
-    "    token_embeddings = model_output[\n",
-    "        0\n",
-    "    ]  # First element of model_output contains all token embeddings\n",
-    "    input_mask_expanded = (\n",
-    "        attention_mask.unsqueeze(-1).expand(token_embeddings.size()).float()\n",
-    "    )\n",
-    "    return torch.sum(token_embeddings * input_mask_expanded, 1) / torch.clamp(\n",
-    "        input_mask_expanded.sum(1), min=1e-9\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "# Function to get bert embeddings from sentences list\n",
-    "def convert_sentence_to_emb(sentences, sentence_emb_model, device):\n",
-    "    # Load model from HuggingFace Hub\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(sentence_emb_model)\n",
-    "    model = AutoModel.from_pretrained(sentence_emb_model).to(device)\n",
-    "\n",
-    "    # Tokenize sentences\n",
-    "    encoded_input = tokenizer(\n",
-    "        sentences, padding=True, truncation=True, return_tensors=\"pt\"\n",
-    "    ).to(device)\n",
-    "\n",
-    "    # Compute token embeddings\n",
-    "    with torch.no_grad():\n",
-    "        model_output = model(**encoded_input)\n",
-    "\n",
-    "    # Perform pooling\n",
-    "    embs = mean_pooling(model_output, encoded_input[\"attention_mask\"])\n",
-    "\n",
-    "    # Normalize embeddings\n",
-    "    return np.array(F.normalize(embs, p=2, dim=1).cpu())\n",
-    "\n",
-    "\n",
-    "def get_summary_and_embs(tokenizer, model, text, device, max_new_tokens=30):\n",
-    "    prefix = \"summarize: \"\n",
-    "    this_batch = [prefix + doc for doc in text if doc is not None]\n",
-    "    # Text encoder\n",
-    "    input_embs = tokenizer(\n",
-    "        this_batch, truncation=True, padding=True, return_tensors=\"pt\"\n",
-    "    ).input_ids.to(device)\n",
-    "\n",
-    "    # Getting output values\n",
-    "    output_embs = model.generate(input_embs, max_new_tokens=max_new_tokens)\n",
-    "\n",
-    "    # Text decoder\n",
-    "    summaries = tokenizer.batch_decode(output_embs, skip_special_tokens=True)\n",
-    "    bert_embs = convert_sentence_to_emb(summaries, sentence_emb_model, device)\n",
-    "    return summaries, output_embs.cpu().numpy(), bert_embs"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "bdff5085-21b8-4292-99bd-2cbcef5ecf84",
    "metadata": {},
@@ -124,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9e6038035bd454ab4cbb2010354fbd3",
+       "model_id": "703ec8701cf64df69b9cd33853f7b614",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,20 +115,15 @@
    ],
    "source": [
     "samsum_dataset = load_dataset(\"samsum\")\n",
-    "golden_dataset = samsum_dataset[\"test\"][0:100]"
+    "golden_dataset = samsum_dataset[\"test\"][0:20]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d1cfcb85-7a57-4b4f-8f2b-5cbfae0ff847",
+   "cell_type": "markdown",
+   "id": "51df6418-4085-41e3-a5e7-d2e41e9ee9bf",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "if torch.cuda.is_available():\n",
-    "    device = \"cuda\"\n",
-    "else:\n",
-    "    device = \"cpu\""
+    "### Define the model to be tested"
    ]
   },
   {
@@ -165,25 +137,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1f128f66-8798-4204-ba0c-791aa285d0f3",
+   "cell_type": "markdown",
+   "id": "cbea0b51-b9e7-489e-bf09-58faff3a4ee0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sentence_emb_model = \"sentence-transformers/paraphrase-MiniLM-L6-v2\"\n",
-    "# sentence_emb_model = \"sentence-transformers/all-MiniLM-L6-v2\""
+    "#### Define a model to genetate sentence embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "961f9590-12ad-48d6-9b28-3387c3ef3ee0",
+   "execution_count": null,
+   "id": "e4891c2c-30e3-4795-a87d-bb0639df1054",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%time\n",
-    "# summaries, output_embs, bert_embs = get_summary_and_embs(tokenizer, model, golden_dataset['dialogue'], device, max_new_tokens=30)"
+    "sentence_emb_model = \"sentence-transformers/paraphrase-MiniLM-L6-v2\""
    ]
   },
   {
@@ -208,7 +176,8 @@
     "        \"st_logging\": True,\n",
     "        \"use_new_handler\": True,\n",
     "        \"run_background_streamlit\": False\n",
-    "    }\n",
+    "    },\n",
+    "    \"license_args\": {\"openai_key\": \"YOUR KEY HERE.\"}\n",
     "}"
    ]
   },
@@ -224,132 +193,18 @@
      "text": [
       "Deleting contents of the folder:  uptrain_smart_data\n",
       "Deleting contents of the log folder at: uptrain_logs\n",
-      "To start the streamlit dashboard, run the following command:  streamlit run /Users/vipul/Downloads/uptrain_repos/uptrain/uptrain/core/classes/logging/new_st_run.py  -- uptrain_logs\n"
+      "To start the streamlit dashboard, run the following command:  streamlit run /Users/vipul/Downloads/uptrain_repos/uptrain/uptrain/core/classes/logging/new_st_run.py  -- uptrain_logs\n",
+      "Average cosine_distance is 0.2782163143157959 on your model.\n",
+      "Average l2_distance is 0.5564326643943787 on your model.\n",
+      "Average openai_score is 70.0 on your model.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 11,\n",
-       " 12,\n",
-       " 13,\n",
-       " 14,\n",
-       " 15,\n",
-       " 16,\n",
-       " 17,\n",
-       " 18,\n",
-       " 19,\n",
-       " 20,\n",
-       " 21,\n",
-       " 22,\n",
-       " 23,\n",
-       " 24,\n",
-       " 25,\n",
-       " 26,\n",
-       " 27,\n",
-       " 28,\n",
-       " 29,\n",
-       " 30,\n",
-       " 31,\n",
-       " 32,\n",
-       " 33,\n",
-       " 34,\n",
-       " 35,\n",
-       " 36,\n",
-       " 37,\n",
-       " 38,\n",
-       " 39,\n",
-       " 40,\n",
-       " 41,\n",
-       " 42,\n",
-       " 43,\n",
-       " 44,\n",
-       " 45,\n",
-       " 46,\n",
-       " 47,\n",
-       " 48,\n",
-       " 49,\n",
-       " 50,\n",
-       " 51,\n",
-       " 52,\n",
-       " 53,\n",
-       " 54,\n",
-       " 55,\n",
-       " 56,\n",
-       " 57,\n",
-       " 58,\n",
-       " 59,\n",
-       " 60,\n",
-       " 61,\n",
-       " 62,\n",
-       " 63,\n",
-       " 64,\n",
-       " 65,\n",
-       " 66,\n",
-       " 67,\n",
-       " 68,\n",
-       " 69,\n",
-       " 70,\n",
-       " 71,\n",
-       " 72,\n",
-       " 73,\n",
-       " 74,\n",
-       " 75,\n",
-       " 76,\n",
-       " 77,\n",
-       " 78,\n",
-       " 79,\n",
-       " 80,\n",
-       " 81,\n",
-       " 82,\n",
-       " 83,\n",
-       " 84,\n",
-       " 85,\n",
-       " 86,\n",
-       " 87,\n",
-       " 88,\n",
-       " 89,\n",
-       " 90,\n",
-       " 91,\n",
-       " 92,\n",
-       " 93,\n",
-       " 94,\n",
-       " 95,\n",
-       " 96,\n",
-       " 97,\n",
-       " 98,\n",
-       " 99]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "framework = uptrain.Framework(cfg_dict=cfg)\n",
     "ids = framework.log(inputs={\"dialogues\": golden_dataset['dialogue']}, outputs=None)\n",
-    "framework.log(identifiers=ids, gts=golden_dataset[\"summary\"])"
+    "ids = framework.log(identifiers=ids, gts=golden_dataset[\"summary\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c02466b-98e7-4149-a54d-49a9cbd06725",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
