Saving additional scores

--- a/examples/llm_evaluation/run.ipynb
+++ b/examples/llm_evaluation/run.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bdff5085-21b8-4292-99bd-2cbcef5ecf84",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "703ec8701cf64df69b9cd33853f7b614",
+       "model_id": "79dc171a515e44538e827a6b883c9293",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4f5f25b6-d7a5-4b5f-bca2-a66eb6686b6a",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e4891c2c-30e3-4795-a87d-bb0639df1054",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c940e7f7-f51a-467a-89d8-c3fd5d5b0f7e",
    "metadata": {},
    "outputs": [],
@@ -177,13 +177,13 @@
     "        \"use_new_handler\": True,\n",
     "        \"run_background_streamlit\": False\n",
     "    },\n",
-    "    \"license_args\": {\"openai_key\": \"YOUR KEY HERE.\"}\n",
+    "    \"license_args\": {\"openai_key\": \"YOUR KEY HERE\"}\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "ed84ba3d-f325-4ce3-91e2-d24e9c1391eb",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
       "To start the streamlit dashboard, run the following command:  streamlit run /Users/vipul/Downloads/uptrain_repos/uptrain/uptrain/core/classes/logging/new_st_run.py  -- uptrain_logs\n",
       "Average cosine_distance is 0.2782163143157959 on your model.\n",
       "Average l2_distance is 0.5564326643943787 on your model.\n",
-      "Average openai_score is 70.0 on your model.\n"
+      "Average openai_score is 75.35 on your model.\n"
      ]
     }
    ],
@@ -205,6 +205,14 @@
     "ids = framework.log(inputs={\"dialogues\": golden_dataset['dialogue']}, outputs=None)\n",
     "ids = framework.log(identifiers=ids, gts=golden_dataset[\"summary\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fa9eca3-02b0-474a-afa2-f461a60dcca1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
