--- a/uptrain/operators/language/openai_eval_custom/custom_registry/evals/model-run.yaml
+++ b/uptrain/operators/language/openai_eval_custom/custom_registry/evals/model-run.yaml
@@ -3,4 +3,4 @@ model_run_all:
 model_run.test.v1:
   args:
     samples_jsonl: ""
-  class: uptrain.evals_uptrain.elsuite.model_run:ModelRun
+  class: uptrain.operators.language.openai_eval_custom.elsuite.model_run:ModelRun
