Fix broken import

--- a/examples/v0/automated_finetuning/bert_finetuning_ww.ipynb
+++ b/examples/v0/automated_finetuning/bert_finetuning_ww.ipynb
@@ -61,7 +61,7 @@
     "# from tqdm import trange\n",
     "# import random\n",
     "# import weightwatcher as ww\n",
-    "import uptrain\n",
+    "import uptrain.v0 as uptrain\n",
     "\n",
     "# import warnings\n",
     "# warnings.filterwarnings(\"ignore\")"
