--- a/examples/v0/ride_time_estimation/run.ipynb
+++ b/examples/v0/ride_time_estimation/run.ipynb
@@ -70,7 +70,7 @@
     "from sklearn import model_selection, metrics\n",
     "from lightgbm import LGBMRegressor\n",
     "import time\n",
-    "import uptrain\n",
+    "import uptrain.v0 as uptrain\n",
     "import os\n",
     "from helper_funcs import download_dataset, process, pretty\n",
     "\n",
