--- a/examples/v0/shopping_cart_recommendation/run.ipynb
+++ b/examples/v0/shopping_cart_recommendation/run.ipynb
@@ -74,7 +74,7 @@
     "import numpy as np\n",
     "import time\n",
     "\n",
-    "import uptrain\n",
+    "import uptrain.v0 as uptrain\n",
     "from gensim.models import Word2Vec\n",
     "\n",
     "from helper_funcs import load_sigir_data, model_predict"
