--- a/examples/v0/speech_to_text/run.ipynb
+++ b/examples/v0/speech_to_text/run.ipynb
@@ -83,7 +83,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import uptrain\n",
+    "import uptrain.v0 as uptrain\n",
     "\n",
     "warnings.simplefilter('ignore')"
    ]
