--- a/examples/v0/text_summarization/run.ipynb
+++ b/examples/v0/text_summarization/run.ipynb
@@ -80,7 +80,7 @@
     "import pandas as pd\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
     "from datasets import load_dataset\n",
-    "import uptrain\n",
+    "import uptrain.v0 as uptrain\n",
     "import json\n",
     "import nltk\n",
     "nltk.download('vader_lexicon')\n",
