--- a/examples/v0/fraud_detection/run.ipynb
+++ b/examples/v0/fraud_detection/run.ipynb
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "import uptrain\n",
+    "import uptrain.v0 as uptrain\n",
     "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
