--- a/examples/v0/human_orientation_classification/run.ipynb
+++ b/examples/v0/human_orientation_classification/run.ipynb
@@ -91,7 +91,7 @@
     "import zipfile\n",
     "import numpy as np\n",
     "import torch\n",
-    "import uptrain\n",
+    "import uptrain.v0 as uptrain\n",
     "import time\n",
     "\n",
     "from helper_files import read_json, KpsDataset\n",
@@ -950,7 +950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "vscode": {
    "interpreter": {
