revert making checks pydantic models

--- a/docs/getting-started/concepts.mdx
+++ b/docs/getting-started/concepts.mdx
@@ -6,7 +6,7 @@ Uptrain evaluations are defined as regular table transforms, which we refer to a
 is defined as a pydantic model, which specifies:
 
 1. Required input columns in the input dataset and output column names
-2. Parameter values to customize the evaluation. For ex, the `Distribution` operator which evaluates 
+2. Parameter values to customize the evaluation. For ex, the `Distribution` operator which evaluates ...
 
 Operators implement,
 1. A `setup` method (initialize resources, set up API keys, etc.)
