add monitoring example

--- a/examples/refactor/prompt-experiments.ipynb
+++ b/examples/refactor/prompt-experiments.ipynb
@@ -74,7 +74,8 @@
    "outputs": [],
    "source": [
     "SCRATCH_SPACE = \"/tmp/uptrain-scratch/\"\n",
-    "os.makedirs(SCRATCH_SPACE, exist_ok=True)"
+    "os.makedirs(SCRATCH_SPACE, exist_ok=True)\n",
+    "UPTRAIN_LOGS_DIR = os.path.join(SCRATCH_SPACE, \"logs\")"
    ]
   },
   {
@@ -92,8 +93,6 @@
    "outputs": [],
    "source": [
     "from uptrain.framework import Settings\n",
-    "\n",
-    "UPTRAIN_LOGS_DIR = os.path.join(SCRATCH_SPACE, \"logs\")\n",
     "\n",
     "# Note this notebook involves a generation step, so the `OPENAI_API_KEY` env variable must be set or \n",
     "# specified in the `Settings` object.\n",
