--- a/examples/validation_tutorial.ipynb
+++ b/examples/validation_tutorial.ipynb
@@ -73,8 +73,7 @@
     "import os\n",
     "os.environ['OPENAI_API_KEY'] = \"...\"\n",
     "import openai\n",
-    "import polars as pl\n",
-    "\n",
+    "import polars as pl"
    ]
   },
   {
