--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -65,6 +65,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "os.environ['OPENAI_API_KEY'] = \"...\"\n",
     "import polars as pl\n",
     "import numpy as np\n",
     "import json\n",
@@ -1616,7 +1617,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1630,7 +1631,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
