--- a/docs/getting-started/key-concepts.mdx
+++ b/docs/getting-started/key-concepts.mdx
@@ -1,4 +1,7 @@
-
+---
+title: "Key Concepts"
+description: "Learn what UpTrain can do in practice"
+---
 
 ## Operators
 
@@ -45,4 +48,3 @@ visualize the results.
 ## Managed Service
 
 We can run the evaluations for you. Please contact us for more information. 
-
