--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -5,12 +5,12 @@ description: "Get started with UpTrain in a few simple steps"
 
 To run it in your machine, follow the steps below:
 
-### Install the package through pip:
+### Install the package through pip
 ```bash
 pip install uptrain
 ```
 
-### Define your checks:
+### Define your checks
 Say we want to check whether our model's responses contain any grammatical mistakes or not.
 
 ```python
