--- a/examples/openai_evals_tutorial.ipynb
+++ b/examples/openai_evals_tutorial.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
     "            # First is the openai grade eval - uses GPT-3.5-turbo\n",
     "            \"openai_eval_score\": OpenAIGradeScore(\n",
     "                col_in_input=\"document_text\",\n",
-    "                col_in_completion=\"response\",\n",
+    "                col_in_completion=\"answer\",\n",
     "                eval_name=\"coqa-closedqa-correct\",\n",
     "            ),\n",
     "\n",
@@ -200,7 +200,7 @@
     "                context_vars={\n",
     "                    'document': \"document_text\",\n",
     "                    \"user_query\": \"question\",\n",
-    "                    \"generated_answer\": \"response\"\n",
+    "                    \"generated_answer\": \"answer\"\n",
     "                }\n",
     "            )\n",
     "        })],\n",
@@ -219,16 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<uptrain.framework.checks.CheckSet at 0x11f7557d0>"
+       "<uptrain.framework.checks.CheckSet at 0x13e52c390>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,37 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-07-01 22:28:54.995\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36muptrain.framework.base\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m106\u001b[0m - \u001b[34m\u001b[1mExecuting node: sequence_0 for operator DAG: Eval scores\u001b[0m\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████| 90/90 [00:18<00:00,  4.93it/s]\n",
-      "\u001b[32m2023-07-01 22:29:13.373\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36mfetch_responses\u001b[0m:\u001b[36m97\u001b[0m - \u001b[33m\u001b[1mDetected Jupyter environment, scheduling requests in a separate thread.\u001b[0m\n",
-      " 97%|███████████████████████████████████████████████████████████████████████████████████████▉   | 87/90 [00:04<00:00, 15.85it/s]\u001b[32m2023-07-01 22:29:18.641\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36masync_process_payload\u001b[0m:\u001b[36m58\u001b[0m - \u001b[31m\u001b[1mError when sending request to openai API: Request timed out\u001b[0m\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████| 90/90 [00:12<00:00,  7.13it/s]\n",
-      "\u001b[32m2023-07-01 22:29:25.997\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36muptrain.operators.language.model_grade\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m143\u001b[0m - \u001b[31m\u001b[1mError when processing payload at index 82: Request timed out\u001b[0m\n",
-      "\u001b[32m2023-07-01 22:29:26.027\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.dashboard.st_setup\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mStreamlit launch command: streamlit run /Users/sourabhagrawal/Desktop/codes/llm/uptrain_experiments/uptrain_new/uptrain/uptrain/dashboard/st_run.py  --server.fileWatcherType none -- uptrain_logs_openai_eval\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8502\n",
-      "  Network URL: http://192.168.0.102:8502\n",
-      "\n",
-      "  For better performance, install the Watchdog module:\n",
-      "\n",
-      "  $ xcode-select --install\n",
-      "  $ pip install watchdog\n",
-      "            \n"
+      "\u001b[32m2023-07-01 22:33:37.511\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36muptrain.framework.base\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m106\u001b[0m - \u001b[34m\u001b[1mExecuting node: sequence_0 for operator DAG: Eval scores\u001b[0m\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████| 90/90 [00:24<00:00,  3.67it/s]\n",
+      "\u001b[32m2023-07-01 22:34:02.186\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36muptrain.operators.language.llm\u001b[0m:\u001b[36mfetch_responses\u001b[0m:\u001b[36m97\u001b[0m - \u001b[33m\u001b[1mDetected Jupyter environment, scheduling requests in a separate thread.\u001b[0m\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████| 90/90 [00:04<00:00, 18.01it/s]\n",
+      "\u001b[32m2023-07-01 22:34:07.228\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36muptrain.dashboard.st_setup\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mStreamlit launch command: streamlit run /Users/sourabhagrawal/Desktop/codes/llm/uptrain_experiments/uptrain_new/uptrain/uptrain/dashboard/st_run.py  --server.fileWatcherType none -- uptrain_logs_openai_eval\u001b[0m\n"
      ]
     }
    ],
