--- a/docs/getting-started/key-concepts.mdx
+++ b/docs/getting-started/key-concepts.mdx
@@ -20,7 +20,7 @@ can just as easily use uptrain operators with your regular data pipelines.
 
 ## Checks
 
-Uptrain evaluations are specified as `Check` objects. Each `SimpleCheck` specifies a sequence of tabular 
+Uptrain evaluations are specified as `Check` objects. Each `Check` specifies a sequence of tabular 
 transformations (`Operators`) to apply to the input dataset, and optionally a set of plots to visualize 
 the results.
 
