--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -17,7 +17,7 @@ Say we want to check whether our model's responses contain any grammatical mista
 # Define your checkset - list of simple checks, dataset file, and api_keys
 
 checkset = CheckSet(
-    checks = SimpleCheck(
+    checks = Check(
         name = "grammar_score",
         sequence = [
             SelectOp(
