move around io operators

--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -32,9 +32,9 @@ checkset = CheckSet(
         plot = PlotlyChart.Table(title="Grammar scores"),
     ),
     source = JsonReader(fpath = '...'),
-    settings = Settings(openai_api_key = '...')
 )
+settings = Settings(openai_api_key = '...')
 
-checkset.setup()
+checkset.setup(settings)
 checkset.run()
 ```
