--- a/examples/openai_evals_tutorial.ipynb
+++ b/examples/openai_evals_tutorial.ipynb
@@ -52,6 +52,7 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -72,6 +73,7 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -118,6 +120,7 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -125,6 +128,7 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -132,6 +136,7 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -152,7 +157,7 @@
             "source": [
                 "from uptrain.framework import CheckSet, Settings, Check\n",
                 "from uptrain.operators.language import ModelGradeScore, OpenAIGradeScore\n",
-                "from uptrain.io import JsonReader\n",
+                "from uptrain.operators.io import JsonReader\n",
                 "from uptrain.operators import PlotlyChart, SelectOp\n",
                 "\n",
                 "check = Check(\n",
@@ -211,6 +216,7 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -237,13 +243,14 @@
                 "checkset = CheckSet(\n",
                 "    source=JsonReader(fpath=dataset_path),\n",
                 "    checks=[check],\n",
-                "    settings=Settings(logs_folder=UPTRAIN_LOGS_DIR),\n",
                 ")\n",
+                "settings=Settings(logs_folder=UPTRAIN_LOGS_DIR)\n",
                 "\n",
-                "checkset.setup()"
+                "checkset.setup(settings)"
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
