--- a/examples/refactor/qna-logs-eval.ipynb
+++ b/examples/refactor/qna-logs-eval.ipynb
@@ -3419,7 +3419,7 @@
             "outputs": [],
             "source": [
                 "from uptrain.framework import CheckSet, Check\n",
-                "from uptrain.io import JsonReader\n",
+                "from uptrain.operators.io import JsonReader\n",
                 "from uptrain.operators import PlotlyChart\n",
                 "\n",
                 "list_checks = [\n",
