--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -5,6 +5,8 @@ description: "What is UpTrain?"
 
 **[UpTrain](https://uptrain.ai)** is a Python framework that helps users to check the performance of their LLM applications on aspects such as correctness, structural integrity, bias, hallucination, etc.
 
+UpTrain is designed to be easy to use, and can be integrated into your existing LLM codebase with minimal changes. It is also designed to be extensible, so that you can easily add your own checks and metrics.
+
 <CardGroup cols={2}>
   <Card
     title="Quickstart"
