--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " **Why evaluate prompts**: LLM outputs are highly sensitive to the prompt provided. Trivial changes to the prompt such as assigning a personality to the LLM by prefixing the prompt with \"Imagine you are a CEO/Writer scientist etc.\", can generate widely different responses, thus impacting the overall application's performance. Hence, it becomes crucial to test multiple prompts over a wide variety of cases to find the one best suited for the application."
+    " **Why evaluate prompts**: LLM outputs are highly sensitive to the prompt provided. Trivial changes to the prompt such as assigning a personality to the LLM by prefixing the prompt with \"Imagine you are a CEO/Writer/Scientist etc.\" can generate widely different responses. This difference impacts the overall application's performance, making it crucial to test multiple prompts over cases to find the one best suited for the application."
    ]
   },
   {
@@ -26,18 +26,19 @@
    "metadata": {},
    "source": [
     "**Problem**: The workflow of our hypothetical Q&A application goes like,\n",
-    "- User enters a natural language query. \n",
-    "- The query is converted to an embedding, and relevant sections from the documentation are retrieved using nearest neighbor search. \n",
-    "- The original query along with the retrieved sections is passed to a language model (LM), along with a custom prompt to generate a response. \n",
+    "- The user enters a question. \n",
+    "- The question is converted to a vector encoding.\n",
+    "- Relevant sections from the documentation are retrieved using a vector database. \n",
+    "- The question and the retrieved sections are inserted into a custom prompt and passed to a language model (LM) to generate a response. \n",
     "\n",
-    "The goal is to find the best prompt which answers the user query. In the given tutorial, we consider a prompt template with LLM_PERSONALITY as a variable and using the experimentation framework to find the best personality to fill in."
+    "The goal is to find the best prompt which answers the user's question."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Solution**: We demonstrate how to use the Uptrain framework to first obtain output responses for a test set of queries. We then evaluate the quality of the responses on some specified metrics."
+    "**Solution**: In the given tutorial, we consider a prompt template with LLM_PERSONALITY as a variable and using the experimentation framework to find the best personality to fill in. We demonstrate how to use the Uptrain framework to first obtain output responses for a test set of queries. We then evaluate the quality of the responses on some specified metrics."
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -65,8 +66,7 @@
     "import polars as pl\n",
     "from loguru import logger\n",
     "\n",
-    "# if you are getting errors, comment this out and retry\n",
-    "logger.remove()\n",
+    "logger.remove() # if you are getting errors, comment this line out and retry\n",
     "TEMP_DIR = tempfile.gettempdir()"
    ]
   },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -148,7 +148,6 @@
       "    {question}\n",
       "    The retrieved document titled \"{document_title}\" has the following text:\n",
       "    {document_text}\n",
-      " \n",
       "\n",
       "prompt_developer:  \n",
       "    You are a backend developer. Answer the following user query using the retrieved document:\n",
@@ -166,10 +165,8 @@
     }
    ],
    "source": [
-    "print(\"prompt_bot: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"bot\"), \"\\n\")\n",
-    "print(\n",
-    "    \"prompt_developer: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"backend developer\")\n",
-    ")\n",
+    "print(\"prompt_bot: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"bot\"))\n",
+    "print(\"prompt_developer: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"backend developer\"))\n",
     "print(\"prompt_expert: \", prompt_base.replace(\"{LLM_PERSONALITY}\", \"python expert\"))"
    ]
   },
@@ -267,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have multiple prompts, let's define our checks to compare which one performs best. As our prompt explicitly asks the LLM to answer the given question using sections from document text only, we are defining a hallucination check which uses (Rouge score)[https://en.wikipedia.org/wiki/ROUGE_(metric)] between the input document text and LLM response."
+    "Now that we have multiple prompts, let's define our checks to compare which one performs best. As our prompt explicitly asks the LLM to answer the given question using sections from document text only, we are defining a hallucination check which uses [Rouge score](https://en.wikipedia.org/wiki/ROUGE_(metric)) between the input document text and LLM response."
    ]
   },
   {
@@ -399,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could some pivoting operations to see which of the experiments have highest overlap score. "
+    "UpTrain offers pivoting options for table. Here, we use this to find out which of the three personalities has the highest overlap scores."
    ]
   },
   {
@@ -434,13 +431,6 @@
    "source": [
     "![prompt_experiment_plot.png](attachment:6c766044-7b50-4e19-a0c0-067390c2f13f.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -459,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
